discussion/kv_engine/155002/155002_rev15_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Explicitly start and stop the ExecutorPool

Add a factory method to ExecutorPool and use that to explicitly
create the executor pool during memcached initialization
phase, and explicitly shut down the pool as part of the
shutdown logic.

Change-Id: I364d0b4b08910fcff9955ce066b9d2ce409be84c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-09 16:22:23.000000000
Message: 
Uploaded patch set 15: Patch Set 14 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 17:30:32.000000000
Message: 
Patch Set 15: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9685/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9685/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9685/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8281/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36647/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/221/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31319/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10333/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11408/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11679/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11260/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19264/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
